--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p>Akan melangsukan resepsi pernikahan dalam:</p>
 
         <div class="simply-countdown"></div>
-        <a href="#undangan" class="btn btn-lg mt-4">Lihat Undangan</a>
+        <a href="#home" class="btn btn-lg mt-4">Lihat Undangan</a>
       </main>
     </section>
 
